Added v4l2 to hyperiond (partial)
Former-commit-id: 06684261ec3ac7bb4e8ff0479e5b1472823648ae

--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -8,7 +8,9 @@ target_link_libraries(hyperiond
 		effectengine
 		jsonserver
 		protoserver
-		boblightserver)
+		boblightserver
+		v4l2-grabber
+)
 
 if (ENABLE_DISPMANX)
 	target_link_libraries(hyperiond dispmanx-grabber)
