--- a/libsrc/grabber/v4l2/CMakeLists.txt
+++ b/libsrc/grabber/v4l2/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/v4l2)
 
 SET(V4L2_QT_HEADERS
 		${CURRENT_HEADER_DIR}/V4L2Grabber.h
+		${CURRENT_HEADER_DIR}/V4L2Wrapper.h
 )
 
 SET(V4L2_HEADERS
@@ -12,6 +13,7 @@ SET(V4L2_HEADERS
 
 SET(V4L2_SOURCES
 		${CURRENT_SOURCE_DIR}/V4L2Grabber.cpp
+		${CURRENT_SOURCE_DIR}/V4L2Wrapper.cpp
 )
 
 QT4_WRAP_CPP(V4L2_HEADERS_MOC ${V4L2_QT_HEADERS})
