Add support for Python 3
Former-commit-id: b6aec954ba0e79ba5697ea8cc305eb9f7d29f332

--- a/config/hyperion_x86.config.json
+++ b/config/hyperion_x86.config.json
@@ -14,7 +14,7 @@
 	{
 		"name"       : "MyPi",
 		"type"       : "adalight",
-		"output"     : "/dev/ttyUSB0",
+        "output"     : "/dev/ttyUSB0",
 		"rate"       : 115200,
 		"colorOrder" : "rgb"
 	},
@@ -363,7 +363,7 @@
 	{
 		"paths" : 
 		[
-			"/opt/hyperion/effects"
+			"/home/dincs/projects/hyperion/effects"
 		]
 	},
 
