--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -9,9 +9,12 @@ target_link_libraries(hyperiond
 		jsonserver
 		protoserver
 		boblightserver
-		v4l2-grabber
 )
 
 if (ENABLE_DISPMANX)
 	target_link_libraries(hyperiond dispmanx-grabber)
 endif (ENABLE_DISPMANX)
+
+if (ENABLE_V4L2)
+	target_link_libraries(hyperiond v4l2-grabber)
+endif (ENABLE_V4L2)
