Added support for tpm2 protocol. One frame used for all LEDs
Former-commit-id: 5b2ed33a50d90999c6f9508ba3782ad73838fb56

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -29,6 +29,7 @@ SET(Leddevice_HEADERS
 		${CURRENT_SOURCE_DIR}/LedDeviceSedu.h
 		${CURRENT_SOURCE_DIR}/LedDeviceTest.h
 		${CURRENT_SOURCE_DIR}/LedDeviceHyperionUsbasp.h
+		${CURRENT_SOURCE_DIR}/LedDeviceTpm2.h
 )
 
 SET(Leddevice_SOURCES
@@ -45,6 +46,7 @@ SET(Leddevice_SOURCES
 		${CURRENT_SOURCE_DIR}/LedDeviceTest.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceHyperionUsbasp.cpp
 		${CURRENT_SOURCE_DIR}/LedDevicePhilipsHue.cpp
+		${CURRENT_SOURCE_DIR}/LedDeviceTpm2.cpp
 )
 
 if(ENABLE_SPIDEV)
