Allow disabling PROTOBUF support
One dependency less for users that only use DISPMANX grabbing


Former-commit-id: 24ea0480e3798bab692e75d82ddb9f5eccfa03c5

--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -11,3 +11,6 @@
 
 // Define to enable the spi-device
 #cmakedefine ENABLE_TINKERFORGE
+
+// Define to enable PROTOBUF server
+#cmakedefine ENABLE_PROTOBUF
