Added LedDevice for "ws2812s" leds To activate: use led device "ws2812s" in the hyperion configuration
Former-commit-id: 0b5ee38679fe353f43bb4a347882d056ca237128

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -68,6 +68,15 @@ if(ENABLE_SPIDEV)
 	)
 endif(ENABLE_SPIDEV)
 
+SET(Leddevice_HEADERS
+		${Leddevice_HEADERS}
+		${CURRENT_SOURCE_DIR}/LedDeviceWS2812s.h
+	)
+SET(Leddevice_SOURCES
+		${Leddevice_SOURCES}
+		${CURRENT_SOURCE_DIR}/LedDeviceWS2812s.cpp
+)
+
 if(ENABLE_TINKERFORGE)
 	SET(Leddevice_HEADERS
 			${Leddevice_HEADERS}
