Rename WS2812s to WS2812b (spelling error)
Former-commit-id: 83c92c9ef99d45b8683860f199a14952c05d0f5d

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -70,11 +70,11 @@ endif(ENABLE_SPIDEV)
 
 SET(Leddevice_HEADERS
 		${Leddevice_HEADERS}
-		${CURRENT_SOURCE_DIR}/LedDeviceWS2812s.h
+		${CURRENT_SOURCE_DIR}/LedDeviceWS2812b.h
 	)
 SET(Leddevice_SOURCES
 		${Leddevice_SOURCES}
-		${CURRENT_SOURCE_DIR}/LedDeviceWS2812s.cpp
+		${CURRENT_SOURCE_DIR}/LedDeviceWS2812b.cpp
 )
 
 if(ENABLE_TINKERFORGE)
