Added delay to smoothing and changed the switch off to continue sending black
Former-commit-id: fa5a7f14b0fdf3a0a74169cfefbf5b625330b753

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -81,7 +81,7 @@
 			"type"            : "none",
 			"time_ms"         : 200,
 			"updateFrequency" : 20.0000,
-			"framesDelay"     : 0
+			"updateDelay"     : 0
 		}
 	},
 
