--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -17,3 +17,7 @@
 
 // Define to enable PROTOBUF server
 #cmakedefine ENABLE_PROTOBUF
+
+// Define to enable the framebuffer grabber
+#cmakedefine ENABLE_FB
+
