Update cross compile info
Former-commit-id: c604de9bc9e0dddc48abddccb93118b6568b6a85

--- a/libsrc/effectengine/CMakeLists.txt
+++ b/libsrc/effectengine/CMakeLists.txt
@@ -1,7 +1,9 @@
 
 find_package(PythonLibs REQUIRED)
 
-include_directories(${PYTHON_INCLUDE_DIRS})
+# Include the python directory. Also include the parent (which is for example /usr/include)
+# which may be required when it is not includes by the (cross-) compiler by default.
+include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
 
 # Define the current source locations
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/effectengine)
