- refactored framebuffer grabber to use ImageResampler - added OsxGrabber for OSX - added binary for imx6 (cubox-i) and updated install script
Former-commit-id: 2c55e292c842c67e54ce36bd91e4f6303b98687a

--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -21,3 +21,6 @@
 // Define to enable the framebuffer grabber
 #cmakedefine ENABLE_FB
 
+// Define to enable the osx grabber
+#cmakedefine ENABLE_OSX
+
