--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -18,6 +18,10 @@ if (ENABLE_FB)
 	target_link_libraries(hyperiond framebuffer-grabber)
 endif (ENABLE_FB)
 
+if (ENABLE_OSX)
+	target_link_libraries(hyperiond osx-grabber)
+endif (ENABLE_OSX)
+
 if (ENABLE_V4L2)
 	target_link_libraries(hyperiond v4l2-grabber)
 endif (ENABLE_V4L2)
