--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,20 @@ endif(ENABLE_V4L2 AND NOT ENABLE_PROTOBUF)
 option(ENABLE_FB "Enable the framebuffer grabber" OFF)
 message(STATUS "ENABLE_FB = " ${ENABLE_FB})
 
+option(ENABLE_OSX "Enable the osx grabber" OFF)
+message(STATUS "ENABLE_OSX = " ${ENABLE_OSX})
+
 if(ENABLE_FB AND ENABLE_DISPMANX)
 	message(FATAL_ERROR "dispmanx grabber and framebuffer grabber cannot be used at the same time")
 endif(ENABLE_FB AND ENABLE_DISPMANX)
+
+if(ENABLE_FB AND ENABLE_OSX)
+	message(FATAL_ERROR "osx grabber and framebuffer grabber cannot be used at the same time")
+endif(ENABLE_FB AND ENABLE_OSX)
+
+if(ENABLE_OSX AND ENABLE_DISPMANX)
+	message(FATAL_ERROR "dispmanx grabber and osx grabber cannot be used at the same time")
+endif(ENABLE_OSX AND ENABLE_DISPMANX)
 
 # Createt the configuration file
 # configure a header file to pass some of the CMake settings
@@ -87,6 +98,10 @@ add_definitions(${QT_DEFINITIONS})
 # TODO[TvdZ]: This linking directory should only be added if we are cross compiling
 if(NOT APPLE)
 	link_directories(${CMAKE_FIND_ROOT_PATH}/lib/arm-linux-gnueabihf)
+endif()
+
+if(ENABLE_OSX)
+	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
 endif()
 
 configure_file(bin/install_hyperion.sh ${LIBRARY_OUTPUT_PATH} @ONLY)
