Added code for amlogic grabber.
Former-commit-id: fdb9c1c5d8ce02d531d2008057e22f1ae8f7d04e

--- a/libsrc/grabber/CMakeLists.txt
+++ b/libsrc/grabber/CMakeLists.txt
@@ -1,3 +1,7 @@
+if (ENABLE_AMLOGIC)
+	add_subdirectory(amlogic)
+endif (ENABLE_AMLOGIC)
+
 if (ENABLE_DISPMANX)
 	add_subdirectory(dispmanx)
 endif (ENABLE_DISPMANX)
@@ -6,14 +10,14 @@ if (ENABLE_FB)
 	add_subdirectory(framebuffer)
 endif (ENABLE_FB)
 
+if (ENABLE_OSX)
+	add_subdirectory(osx)
+endif()
+
 if (ENABLE_V4L2)
 	add_subdirectory(v4l2)
 endif (ENABLE_V4L2)
 
 if (ENABLE_X11)
 	add_subdirectory(x11)
-endif()
-
-if (ENABLE_OSX)
-	add_subdirectory(osx)
 endif()
