Added tool to create screenshot for amlogic grabber
Former-commit-id: d403deab3f931d01bec97b726d8e70b73d3a0012

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,13 +3,16 @@ add_subdirectory(hyperion-remote)
 
 # The following clients depend on the protobuf library
 if(ENABLE_PROTOBUF)
-    # Add the 'Video 4 Linux' grabber if it is enabled
-    if(ENABLE_V4L2)
-            add_subdirectory(hyperion-v4l2)
-    endif()
+	if (ENABLE_AMLOGIC)
+		add_subdirectory(hyperion-aml)
+	endif()
+	# Add the 'Video 4 Linux' grabber if it is enabled
+	if(ENABLE_V4L2)
+		add_subdirectory(hyperion-v4l2)
+	endif()
 
-    # Add the X11 grabber if it is enabled
-    if(ENABLE_X11)
-            add_subdirectory(hyperion-x11)
-    endif()
+	# Add the X11 grabber if it is enabled
+	if(ENABLE_X11)
+		add_subdirectory(hyperion-x11)
+	endif()
 endif()
