Finished the amlogic grabber for the 'WeTek Play'
Former-commit-id: e459cdfe6273ad2bfee92d2d190801ebdc691a5c

--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -21,6 +21,9 @@
 // Define to enable the framebuffer grabber
 #cmakedefine ENABLE_FB
 
+// Define to enable the amlogic grabber
+#cmakedefine ENABLE_AMLOGIC
+
 // Define to enable the osx grabber
 #cmakedefine ENABLE_OSX
 
