--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(Hyperion_HEADERS
 		${CURRENT_HEADER_DIR}/PriorityMuxer.h
 
 		${CURRENT_SOURCE_DIR}/MultiColorTransform.h
+		${CURRENT_SOURCE_DIR}/MultiColorCorrection.h
 )
 
 SET(Hyperion_SOURCES
@@ -29,6 +30,7 @@ SET(Hyperion_SOURCES
 
 		${CURRENT_SOURCE_DIR}/ImageToLedsMap.cpp
 		${CURRENT_SOURCE_DIR}/MultiColorTransform.cpp
+		${CURRENT_SOURCE_DIR}/MultiColorCorrection.cpp
 		${CURRENT_SOURCE_DIR}/LinearColorSmoothing.cpp
 )
 
