make priority of boot effect adjustable. It is set to 0 to not alter to current behaciour. A value of 900 could be more feasable, because boot effect with prio 0 isn't overwritable by other effects
Former-commit-id: 1852339e6ade62c86719cfbb47faa46eb8f8d4ed

--- a/config/hyperion_x86.config.json
+++ b/config/hyperion_x86.config.json
@@ -359,6 +359,7 @@
 	/// The configuration of the effect engine, contains the following items: 
 	///  * paths        : An array with absolute location(s) of directories with effects 
 	///  * bootsequence : The effect selected as 'boot sequence'
+	///    * duration_ms : duration of boot effect in ms. 0 means effect stays forever
 	"effects" : 
 	{
 		"paths" : 
@@ -369,8 +370,9 @@
 
 	"bootsequence" : 
 	{
-		"effect" : "Rainbow swirl fast",
-		"duration_ms" : 3000
+		"effect"      : "Rainbow swirl fast",
+		"duration_ms" : 3000,
+		"priority"    : 0
 	},
 
 	///  The configuration for the frame-grabber, contains the following items: 
