implement dispmanx forwarding a a separate dispmanx wrapper implement forwarding for amlogic grabber
Former-commit-id: 8a793d24bd083f9eca07c34ec3b222f0e54b4426

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,9 @@ if(ENABLE_PROTOBUF)
 	if(ENABLE_X11)
 		add_subdirectory(hyperion-x11)
 	endif()
+
+	if(ENABLE_DISPMANX)
+		add_subdirectory(hyperion-dispmanx)
+	endif()
+
 endif()
