prepare standalone amlogic grabber activate internal amlogic grabber forwarding
Former-commit-id: 21dabf759935836eef556baeb8a27e362e95ae96

--- a/libsrc/grabber/amlogic/CMakeLists.txt
+++ b/libsrc/grabber/amlogic/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/amlogic)
 SET(AmlogicQT_HEADERS ${CURRENT_HEADER_DIR}/AmlogicWrapper.h)
 
 SET(AmlogicHEADERS
-		${CURRENT_SOURCE_DIR}/AmlogicGrabber.h
+		${CURRENT_HEADER_DIR}/AmlogicGrabber.h
 )
 
 SET(AmlogicSOURCES
