--- a/config/hyperion_x86.config.json
+++ b/config/hyperion_x86.config.json
@@ -391,19 +391,20 @@
 		"color"       : [0,0,0],
 		"effect"      : "Rainbow swirl fast",
 		"duration_ms" : 3000,
-		"priority"    : 900
+		"priority"    : 990
 	},
 
 	///  The configuration for the frame-grabber, contains the following items: 
 	///   * width        : The width of the grabbed frames [pixels]
 	///   * height       : The height of the grabbed frames [pixels]
 	///   * frequency_Hz : The frequency of the frame grab [Hz]
-// 	"framegrabber" : 
-// 	{
-// 		"width" : 64,
-// 		"height" : 64,
-// 		"frequency_Hz" : 10.0
-// 	},
+///	"framegrabber" : 
+///	{
+///		"width"        : 64,
+///		"height"       : 64,
+///		"frequency_Hz" : 10.0,
+///		"priority"     : 900
+///	},
 
 	/// The configuration of the XBMC connection used to enable and disable the frame-grabber. Contains the following fields: 
 	///  * xbmcAddress       : The IP address of the XBMC-host
@@ -444,7 +445,8 @@
 	///  * port : Port at which the boblight server is started
 // 	"boblightServer" : 
 // 	{
-// 		"port" : 19333
+// 		"port" : 19333,
+//		"priority" : 900
 // 	},
 
 	"endOfJson" : "endOfJson"
