create external framebuffer grabber cleanup some cmakelist files fix qt5 build
Former-commit-id: 024b5b6dc5dc96fcb16f6e8958ad3684a6728504

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,4 +20,8 @@ if(ENABLE_PROTOBUF)
 		add_subdirectory(hyperion-dispmanx)
 	endif()
 
+	if(ENABLE_FB)
+		add_subdirectory(hyperion-framebuffer)
+	endif()
+
 endif()
