--- a/src/hyperion-framebuffer/CMakeLists.txt
+++ b/src/hyperion-framebuffer/CMakeLists.txt
@@ -2,56 +2,51 @@
 cmake_minimum_required(VERSION 2.8)
 
 # Set the project name
-project(hyperion-x11)
+project(hyperion-framebuffer)
 
 # find QT
 if(ENABLE_QT5)
 	find_package(Qt5Widgets REQUIRED)
 else(ENABLE_QT5)
-	find_package(Qt4 REQUIRED QtCore QtGui QtNetwork)
+	find_package(Qt4 REQUIRED QtCore QtGui QtNetwork )
 endif(ENABLE_QT5)
-
-# Find X11
-find_package(X11 REQUIRED)
 
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}/../../libsrc/protoserver
 	${QT_INCLUDES}
-	${X11_INCLUDES}
 	${PROTOBUF_INCLUDE_DIRS}
 )
 
-set(Hyperion_X11_QT_HEADERS
-	X11Wrapper.h)
-
-set(Hyperion_X11_HEADERS
+set(Hyperion_FB_QT_HEADERS
+	FramebufferWrapper.h
 )
 
-set(Hyperion_X11_SOURCES
-	hyperion-x11.cpp
-	X11Wrapper.cpp
+set(Hyperion_FB_HEADERS
+)
+
+set(Hyperion_FB_SOURCES
+	hyperion-framebuffer.cpp
+	FramebufferWrapper.cpp
 )
 
 if(ENABLE_QT5)
-	QT5_WRAP_CPP(Hyperion_X11_HEADERS_MOC ${Hyperion_X11_QT_HEADERS})
+	QT5_WRAP_CPP(Hyperion_FB_HEADERS_MOC ${Hyperion_FB_QT_HEADERS})
 else(ENABLE_QT5)
-	QT4_WRAP_CPP(Hyperion_X11_HEADERS_MOC ${Hyperion_X11_QT_HEADERS})
+	QT4_WRAP_CPP(Hyperion_FB_HEADERS_MOC ${Hyperion_FB_QT_HEADERS})
 endif(ENABLE_QT5)
 
-
-add_executable(${PROJECT_NAME}
-	${Hyperion_X11_HEADERS}
-	${Hyperion_X11_SOURCES}
-	${Hyperion_X11_HEADERS_MOC}
+add_executable( ${PROJECT_NAME}
+	${Hyperion_FB_HEADERS}
+	${Hyperion_FB_SOURCES}
+	${Hyperion_FB_HEADERS_MOC}
 )
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries( ${PROJECT_NAME}
 	getoptPlusPlus
 	blackborder
 	hyperion-utils
 	protoserver
-	x11-grabber
-	${X11_LIBRARIES}
+	framebuffer-grabber
 	pthread
 )
 
