--- a/src/hyperion-aml/CMakeLists.txt
+++ b/src/hyperion-aml/CMakeLists.txt
@@ -4,8 +4,12 @@ cmake_minimum_required(VERSION 2.8)
 # Set the project name
 project(hyperion-aml)
 
-# find Qt4
-find_package(Qt4 REQUIRED QtCore QtGui QtNetwork)
+# find QT
+if(ENABLE_QT5)
+	find_package(Qt5Widgets REQUIRED)
+else(ENABLE_QT5)
+	find_package(Qt4 REQUIRED QtCore QtGui QtNetwork)
+endif(ENABLE_QT5)
 
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}/../../libsrc/protoserver
@@ -31,13 +35,13 @@ else(ENABLE_QT5)
 	QT4_WRAP_CPP(Hyperion_AML_HEADERS_MOC ${Hyperion_AML_QT_HEADERS})
 endif(ENABLE_QT5)
 
-add_executable(hyperion-amlogic
+add_executable(${PROJECT_NAME}
 	${Hyperion_AML_HEADERS}
 	${Hyperion_AML_SOURCES}
 	${Hyperion_AML_HEADERS_MOC}
 )
 
-target_link_libraries(hyperion-amlogic
+target_link_libraries(${PROJECT_NAME}
 	getoptPlusPlus
 	blackborder
 	hyperion-utils
@@ -46,7 +50,8 @@ target_link_libraries(hyperion-amlogic
 	pthread
 )
 
-qt4_use_modules(hyperion-amlogic
-	Core
-	Gui
-	Network)
+if(ENABLE_QT5)
+	qt5_use_modules(${PROJECT_NAME} Widgets Core Gui Network)
+else(ENABLE_QT5)
+	qt4_use_modules(${PROJECT_NAME} Core Gui Network )
+endif(ENABLE_QT5)
