add install commands instead of "make" use "make install/strip" release compile
Former-commit-id: f4dd2d9e1a4d815b667665892a3bd9cec64218a3

--- a/src/hyperion-dispmanx/CMakeLists.txt
+++ b/src/hyperion-dispmanx/CMakeLists.txt
@@ -63,3 +63,6 @@ else(ENABLE_QT5)
 		Network
 	)
 endif(ENABLE_QT5)
+
+
+install ( TARGETS ${PROJECT_NAME} DESTINATION "${CMAKE_SOURCE_DIR}/deploy/bin" )
