--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,9 @@ if(ENABLE_OSX AND ENABLE_DISPMANX)
 endif(ENABLE_OSX AND ENABLE_DISPMANX)
 
 
+SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_SOURCE_DIR}/deploy )
+SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_SOURCE_DIR}/deploy )
+
 #if(ENABLE_QT5)
 # TODO vs ENABLE_QT4?
 #endif(ENABLE_QT5)
