install proto to binary dir
Former-commit-id: aaac3a7094442b0bfc51a572fcfa6f7cc59b81a2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ if(ENABLE_OSX AND ENABLE_DISPMANX)
 endif(ENABLE_OSX AND ENABLE_DISPMANX)
 
 
-SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_SOURCE_DIR}/deploy )
-SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_SOURCE_DIR}/deploy )
+SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/proto )
+SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/proto )
 
 #if(ENABLE_QT5)
 # TODO vs ENABLE_QT4?
