--- a/libsrc/utils/CMakeLists.txt
+++ b/libsrc/utils/CMakeLists.txt
@@ -23,8 +23,12 @@ add_library(hyperion-utils
 
 		${CURRENT_HEADER_DIR}/HsvTransform.h
 		${CURRENT_SOURCE_DIR}/HsvTransform.cpp
+		${CURRENT_HEADER_DIR}/HslTransform.h
+		${CURRENT_SOURCE_DIR}/HslTransform.cpp
 		${CURRENT_HEADER_DIR}/RgbChannelTransform.h
 		${CURRENT_SOURCE_DIR}/RgbChannelTransform.cpp
+		${CURRENT_HEADER_DIR}/RgbChannelCorrection.h
+		${CURRENT_SOURCE_DIR}/RgbChannelCorrection.cpp
 
 		${CURRENT_HEADER_DIR}/jsonschema/JsonFactory.h
 		${CURRENT_HEADER_DIR}/jsonschema/JsonSchemaChecker.h
