--- a/config/hyperion_x86.config.json
+++ b/config/hyperion_x86.config.json
@@ -5,7 +5,7 @@
 	/// Device configuration contains the following fields: 
 	/// * 'name'       : The user friendly name of the device (only used for display purposes)
 	/// * 'type'       : The type of the device or leds (known types for now are 'ws2801', 'ldp8806',
-	///                  'lpd6803', 'sedu', 'adalight', 'lightpack', 'test' and 'none')
+	///                  'lpd6803', 'sedu', 'adalight', 'lightpack', 'file' and 'none')
 	/// * 'output'     : The output specification depends on selected device. This can for example be the
 	///                  device specifier, device serial number, or the output file name
 	/// * 'rate'       : The baudrate of the output to the device
